fix: readme file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "preparation_kit",
+  "name": "Preparation Kit",
   "version": "1.0.0",
   "description": "Preparation Kit For Interview",
   "main": "index.js",
